# giteam

./: .gitignore  ARCHITECTURE.md  README.md  config.json  message-todo-dock-simple.tsx  message-todo-dock.tsx  notes.md  package-lock.json  package.json  run_debug.ps1  run_debug.sh  task_plan.md  team-ai-collaboration-client-design.md  test_cache.sh  test_question_api.sh  test_question_fix.sh  test_question_flow.sh
.giteam/: opencode-skill-source-groups.json
.github/workflows/: npm-publish.yml
.obsidian/: graph.json  workspace.json
apps/cli/: Cargo.toml  README.md  giteam-cli-0.1.0.tgz  package.json  字符画.txt
apps/cli/npm-src/apps/cli/: Cargo.toml  字符画.txt
apps/cli/npm-src/apps/cli/src/: main.rs
apps/cli/npm-src/crates/giteam-core/: Cargo.toml
apps/cli/npm-src/crates/giteam-core/src/: command_runner.rs  control.rs  desktop_rpc.rs  lib.rs  opencode.rs
apps/cli/npm/darwin-arm64/: README.md  giteam-cli-darwin-arm64-0.1.0.tgz  package.json
apps/cli/npm/darwin-x64/: README.md  package.json
apps/cli/npm/linux-arm64/: README.md  package.json
apps/cli/npm/linux-x64/: README.md  package.json
apps/cli/npm/win32-x64/: README.md  package.json
apps/cli/scripts/: build-platform-package.js  platform-manifest.js  postinstall.js  publish-packages.js  sync-platform-packages.js  sync-rust-sources.js  sync-web-assets.js
apps/cli/src/: doctor.rs  main.rs
apps/cli/web-assets/: web.html
apps/desktop/: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  servers.json  tsconfig.json  vite.config.ts  web.html  worktree.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.giteam/: client.db
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: command_runner.rs  control.rs  db.rs  entire.rs  env.rs  git.rs  giteam_cli.rs  mod.rs  opencode.rs  ui.rs  watch.rs
apps/mobile/: App.tsx  README.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
crates/giteam-core/: Cargo.toml
docs/: ARCHITECTURE_SUMMARY.md  HANDOVER.md  desktop-shadcn-refactor-plan.md  mobile-chat-message-flow.md  opencode-message-store-alignment-plan.md
docs/worklog/: 2026-03-25-step-01-bootstrap.md  2026-03-25-step-02-scaffold.md  2026-03-25-step-03-validation-and-next.md  2026-03-25-step-04-command-policy-parser-sqlite.md  2026-03-25-step-05-validation-notes.md  2026-03-25-step-06-test-repo-debug.md  2026-03-25-step-07-repo-path-scoping.md  2026-03-25-step-08-review-actions-and-runtime-check.md  2026-03-25-step-09-compile-fixes.md  2026-03-25-step-10-timeline-feature.md  2026-03-25-step-11-repo-sidebar-and-branch-commit-context.md  2026-03-25-step-12-fix-branch-commit-rendering.md  2026-04-03-step-33-mobile-react-mvp.md  (+24 more)
(+336 files in other folders)
