[package]
name = "giteam-cli"
version = "0.1.7"
edition = "2021"

[[bin]]
name = "giteam"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
giteam-core = { path = "../../crates/giteam-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
