[package]
name = "giteam-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rusqlite = { version = "0.32", features = ["bundled"] }
wait-timeout = "0.2"
rfd = "0.14"

[build-dependencies]
tauri-build = { version = "2", features = [] }
