[package]
name = "giteam-desktop"
version = "0.1.0"
edition = "2021"

[features]
default = ["tauri-app"]
tauri-app = []

[dependencies]
giteam-core = { path = "../../../crates/giteam-core", features = ["tauri-app"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rusqlite = { version = "0.32", features = ["bundled"] }
wait-timeout = "0.2"
rfd = "0.14"
urlencoding = "2"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["std", "NSMenu", "NSEvent", "NSResponder", "NSView"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
