[package]
name = "giteam-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
tauri-app = ["dep:tauri"]

[dependencies]
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [], optional = true }
urlencoding = "2"
wait-timeout = "0.2"
